# Uninstall-the-game

./: .gitignore  CMakeLists.txt  README.md
Config/: window.ini
States/: GameState.cpp  GameState.h  MainMenu.cpp  MainMenu.h  States.h
docs/: Button.md  Clickable.md  Engine.md  Entity.md  sfml.md
headers/: Game.h  Player.h  State.h
headers/Assets/: Fonts.cpp  Fonts.h  Fonts.hpp  Textures.h
headers/Engine/: Button.cpp  Button.h  Clickable.cpp  Clickable.h  Engine.h  Entity.cpp  Entity.h  Label.cpp  Label.h  MovementC.cpp  MovementC.h  Object.cpp  Object.h  ProgressBar.cpp  ProgressBar.h
src/: Game.cpp  Player.cpp  State.cpp  main.cpp
